# chiark-mcp

./: LICENSE  README.md  pyproject.toml  server.json
src/chiark_mcp/: __init__.py  __main__.py  server.py
